# llm_utils

./: .cursorignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/llm_utils/: __init__.py  _logging.py  base_llm_service.py  cluster_server_manager.py  constants.py  exceptions.py  llm_model.py  llm_service_factory.py  media_utils.py
src/llm_utils/chat_templates/: passthrough.jinja  vicuna_v1.1.jinja
src/llm_utils/llm_services/: __init__.py  bedrock_service.py  claude_service.py  google_service.py  local_lm_service.py  nurc_cluster_service.py  openai_compatible_services.py  openai_service.py
text_docs/: design.md
