[project]
name = "llm_utils"
version = "2.1.0"
description = "One interface over LLM providers: OpenAI, Anthropic, Gemini, Bedrock, local HF models, and SLURM-cluster serving."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
local = [
    "torch>=2.2",
    "transformers>=4.45",
]
bedrock = [
    "boto3>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_utils"]
