[project]
name = "llm_utils"
version = "2.3.0"
description = "One interface over LLM providers: OpenAI, Anthropic, Gemini, Bedrock, local HF models, and SLURM-cluster serving."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # openai floor: 2.47 is the verified version accepting httpx2 clients as http_client
    "openai>=2.47",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "httpx2>=2.9",
    "python-dotenv>=1.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
local = [
    "torch>=2.2",
    "transformers>=4.45",
]
bedrock = [
    "boto3>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_utils"]
